jekyll if not finished

--- a/site/index.html
+++ b/site/index.html
@@ -35,6 +35,7 @@ layout: default
 
     <!-- Creates div for all members -->
     {% for member in eht_members %}
+    {% if member.DOLJ_PROFIL == TRUE}
     {% if forloop.first %}
     <div class="item active">
       {% else %}
@@ -80,6 +81,7 @@ layout: default
             </div>
           </div>
         </div>
+        {% endif %}
       </div>
       {% endfor %}
 
