Changed Floor to location on website

--- a/site/index.html
+++ b/site/index.html
@@ -60,10 +60,10 @@ layout: default
                 Arbetstider: {{ member.ARBETSTIDER }}
               </p>
               {% endif %}
-              {% if member.VANING %}
+              {% if member.PLATS %}
               <p>
                 <img src="assets/img/location.svg">
-                Våning: {{ member.VANING}}
+                {{ member.PLATS }}
               </p>
               {% endif %}
             </div>
