Remove incorrect alt text on images

--- a/site/index.html
+++ b/site/index.html
@@ -6,12 +6,12 @@ layout: default
 
 
 <div class="logo">
-  <img src="assets/img/nti-logo.svg" alt="TE4" height="150px">
+  <img src="assets/img/nti-logo.svg" height="150px">
   <p><b>Elevhälsan</b></p>
 </div>
 <div class="logoright">
   <p><b>TE4</b></p>
-  <img src="assets/img/nti-logo-reverse.svg" alt="TE4" height="150px">
+  <img src="assets/img/nti-logo-reverse.svg" height="150px">
 </div>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
