Make data path configurable
Co-Authored-By: Andreas423 <142991086+Andreas423@users.noreply.github.com>

--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% assign eht_members = site.data.stored_data %}
+{% assign eht_members = site.data[site.eht_csv_path] %}
 
 
 <div class="logo">
