--- a/site/index.html
+++ b/site/index.html
@@ -73,8 +73,24 @@ layout: default
       {% endif %}
       {% endfor %}
 
+      <div class="item" id="event">
+        <div class="background-grid-layout">
+          <div class="grid-item-information">
+            <div class="info" id="event-slide">
+              <h1 class="name">
+                <div id="sortedDateContainer">event_countdown("../site/_data/stored_event_data.csv")</div>
+              </h1>
+              <p class="status"></p>
+              <div class="latestChange">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
   </div>
 </div>
 <script src="update_status.js"></script>
+<script type="module" src="event_countdown.js"></script>
