Add function to sort upcoming events, and posting on site

--- a/site/index.html
+++ b/site/index.html
@@ -78,7 +78,7 @@ layout: default
           <div class="grid-item-information">
             <div class="info" id="event-slide">
               <h1 class="name">
-                <div id="sortedDateContainer">event_countdown("../site/_data/stored_event_data.csv")</div>
+                <div id="sortedDateContainer"></div>
               </h1>
               <p class="status"></p>
               <div class="latestChange">
