updated information and misc
correct elevhälsa
carousel own js file
event tests removed

--- a/site/index.html
+++ b/site/index.html
@@ -73,19 +73,19 @@ layout: default
       {% endfor %}
 
       <div class="" id="event1" data-interval="">
-        <div class="background-grid-layout ">
+        <!-- <div class="background-grid-layout ">
           <div class="grid-item-information sortedContainer"> <span id="sortedDateContainer1">
 
             </span>
           </div>
           <div class="grid-item-information " id="eventDescription"></div>
 
-        </div>
+        </div> -->
       </div>
 
     </div>
   </div>
-  <script src="update_status.js"></script>
+  <script src="misc.js"></script>
 
 
   {% if site.eht_csv_path == "correct_test_data" %}
