images moved outside of assets folder in site
images auto generates in site/profilepics and gets copied to profilepics in _site when jekyll comand is run.

--- a/site/index.html
+++ b/site/index.html
@@ -30,7 +30,7 @@ layout: default
         {% endif %}
         <div class="background-grid-layout">
           <div class="grid-item-image">
-            <img src="assets/img/{{image_path}}/{{member.FILNAMN}}">
+            <img src="{{image_path}}/{{member.FILNAMN}}">
           </div>
           <div class="grid-item-information">
             <div class="info">
