--- a/site/index.html
+++ b/site/index.html
@@ -30,7 +30,7 @@ layout: default
         {% endif %}
         <div class="background-grid-layout">
           <div class="grid-item-image">
-            <img src="{{image_path}}/{{member.FILNAMN}}">
+            <img src="_profilepics/{{member.FILNAMN}}">
           </div>
           <div class="grid-item-information">
             <div class="info">
